--- a/heima-leadnews-basic/heima-knife4j-spring-boot-starter/pom.xml
+++ b/heima-leadnews-basic/heima-knife4j-spring-boot-starter/pom.xml
@@ -18,6 +18,11 @@
     <dependencies>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
