--- a/heima-leadnews-basic/pom.xml
+++ b/heima-leadnews-basic/pom.xml
@@ -13,5 +13,6 @@
     <modules>
         <module>heima-knife4j-spring-boot-starter</module>
         <module>heima-exception-spring-boot-starter</module>
+        <module>heima-file-spring-boot-starter</module>
     </modules>
 </project>
